Some enhancements to make local runs more practical.
The LC_ALL=C is a temporary fix for gcc version detection.

Signed-off-by: Dennis van Dok <dennisvd@nikhef.nl>

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+# Emacs uses -*- org -*- mode
 * User space package management
 
   The PoC (Proof of Concept / Packages of Choice) has always been a centrally provided collection of
